--- a/index.html
+++ b/index.html
@@ -31,7 +31,32 @@
       href="https://fonts.googleapis.com/css2?family=Cookie&family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- Favicons -->
     <link rel="shortcut icon" href="img/faviconit/favicon.ico" />
     <link
@@ -218,33 +243,22 @@
               <span class="falta">Faltan</span>
 
               <div id="reloj" class="reloj">
-                <div id="dias" class="reloj-col">
+                <div id="dias" class="reloj-col dias">
                   <span class="number"></span>
                   <span class="time">días</span>
                 </div>
 
-                <div id="horas" class="reloj-col">
+                <div id="horas" class="reloj-col no-border">
                   <span class="number"></span>
-                  <span class="time">hs</span>
-                </div>
-
-                <div id="minutos" class="reloj-col">
-                  <span class="number"></span>
-                  <span class="time">min</span>
-                </div>
-
-                <div id="segundos" class="reloj-col no-border">
-                  <span class="number"></span>
-                  <span class="time">seg</span>
+                  <span class="time">horas</span>
                 </div>
 
                 <div class="clearfix"></div>
               </div>
 
-              <div class="d-flex justify-content-center align-items-center">
-                <!-- Corazon -->
+              <!-- <div class="d-flex justify-content-center align-items-center">
                 <div class="corazon-falta"></div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -505,22 +519,15 @@
             <div class="anim-instagram"></div>
           </div>
 
+          <br />
           <div class="w-100">
-            <img src="https://loading.io/icon/d3f9it">
-          </div>
-
-
-          <div class="w-100">
-            <a target="_blank" href="ttps://www.instagram.com/explore/tags/albertoyestibaliz/" class="hashtag"
-              >#AlbertoyEstibaliz</a
+            <a
+              target="_blank"
+              href="https://photos.app.goo.gl/WWRGQSs5iwcgCxZA6"
+              class="boton"
+              >Acceder al álbum</a
             >
           </div>
-
-          <br />
-
-          <a target="_blank" href="https://www.instagram.com/explore/tags/albertoyestibaliz/" class="boton"
-            >Ver en Instagram</a
-          >
         </div>
       </div>
     </section>
@@ -744,10 +751,7 @@
                 </div>
 
                 <div class="modal-footer">
-                  <button
-                    id="sendSugerenciaCancion"
-                    class="boton"
-                  >
+                  <button id="sendSugerenciaCancion" class="boton">
                     Sugerir canción
                   </button>
                 </div>
@@ -1048,7 +1052,7 @@
         player = new YT.Player("player-musica-fondo", {
           height: "10",
           width: "10",
-          videoId: "tHtsMkPOcjY",
+          videoId: "pU0o1T14fr0",
           // playerVars: {
           //   playlist: "rtOvBOTyX00",
           //   loop: 1,
