--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
     
     .caption span.border {
-      background-color: #111;
+      background-color: #06402B;
       color: #fff;
       padding: 18px;
       font-size: 25px;
