--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           </div>
 
           <br />
-          <div class="w-100">
+          <div class="w-100 mt-15">
             <a
               target="_blank"
               href="https://photos.app.goo.gl/WWRGQSs5iwcgCxZA6"
@@ -924,7 +924,7 @@
       var tokenProducto = "";
 
       // Cuenta regresiva
-      var fechaCuentaRegresiva = "05/24/2025 12:00:00";
+      var fechaCuentaRegresiva = "05/24/2025 14:00:00";
 
       // Mapas
       var latitudFiesta = 39.555721;
@@ -1087,7 +1087,7 @@
       // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
         event.target.setVolume(80);
-        // event.target.playVideo();
+        event.target.playVideo();
       }
 
       // Pausar video
