--- a/index.html
+++ b/index.html
@@ -1073,11 +1073,11 @@
         player = new YT.Player("player-musica-fondo", {
           height: "10",
           width: "10",
-          videoId: "pU0o1T14fr0",
-          // playerVars: {
-          //   playlist: "rtOvBOTyX00",
-          //   loop: 1,
-          // },
+          // videoId: "pU0o1T14fr0",
+          playerVars: {
+            playlist: "rtOvBOTyX00",
+            loop: 1,
+          },
           events: {
             onReady: onPlayerReady,
           },
