--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
           <div class="content-galeria">
             <h2 class="title">Retratos de Nuestro Amor</h2>
             <p class="subtitle">
-              Un minuto, un segundo, un instante que queda en la eternidad
+              Después de los grandes momentos, quedan inolvidables recuerdos.
             </p>
 
             <div class="anim-galeria"></div>
@@ -426,7 +426,7 @@
           <div class="col-md-12">
             <h2 class="title">Fiesta</h2>
             <p class="subtitle">
-              Hagamos juntos una fiesta única. Os dejamos algunos detalles a
+              Os dejamos algunos detalles a
               tener en cuenta.
             </p>
           </div>
@@ -488,8 +488,8 @@
           class="row text-center d-flex justify-content-center align-items-center"
         >
           <h2 class="title">Regalos</h2>
-          <p class="subtitle">
-            Si deseáis regalarnos algo más que vuestra hermosa presencia...
+          <p class="subtitle mt-15">
+            El regalo es opcional, ¡la asistencia obligatoria! Pero si quereis tener un detalle con nosotros...
           </p>
 
           <div class="w-100">
@@ -499,7 +499,7 @@
           <br />
 
           <a href="#" class="boton modal-regalos"
-            >Número de IBAN y lista de regalos</a
+            >Regalos</a
           >
         </div>
       </div>
@@ -862,7 +862,7 @@
           </div>
 
           <div class="modal-header">
-            <h5 class="modal-title">Regalos</h5>
+            <h5 class="modal-title">Tres cosas hay en la vida: salud, dinero y amor. Afortunadamente nos sobran salud y amor.</h5>
           </div>
           <br />
           <p
@@ -872,7 +872,6 @@
           >
             ES34 0073 0100 5105 8719 9000
           </p>
-          <br /><br />
 
           <a id="copy-iban" class="link" href="#">Copiar IBAN</a> <br />
 
