feat: add scripts

--- a/index.html
+++ b/index.html
@@ -395,15 +395,15 @@
             </div>
           </div> -->
 
-               <!-- Impmrimo el bloque con la imagen -->
+          <!-- Impmrimo el bloque con la imagen -->
 
-               <div>
-                <div class="polaroid">
-                  <a href="img/galeria/1-us.jpg" data-fancybox="galeria">
-                    <img src="img/galeria/1-us.jpg" alt="" />
-                  </a>
-                </div>
-              </div>
+          <div>
+            <div class="polaroid">
+              <a href="img/galeria/1-us.jpg" data-fancybox="galeria">
+                <img src="img/galeria/1-us.jpg" alt="" />
+              </a>
+            </div>
+          </div>
 
           <!-- Impmrimo el bloque con la imagen -->
 
@@ -436,8 +436,7 @@
           <div class="col-md-12">
             <h2 class="title">Fiesta</h2>
             <p class="subtitle">
-              Os dejamos algunos detalles a
-              tener en cuenta.
+              Os dejamos algunos detalles a tener en cuenta.
             </p>
           </div>
 
@@ -499,7 +498,8 @@
         >
           <h2 class="title">Regalos</h2>
           <p class="subtitle mt-15">
-            El regalo es opcional, ¡la asistencia obligatoria! Pero si quereis tener un detalle con nosotros...
+            El regalo es opcional, ¡la asistencia obligatoria! Pero si quereis
+            tener un detalle con nosotros...
           </p>
 
           <div class="w-100">
@@ -508,9 +508,7 @@
 
           <br />
 
-          <a href="#" class="boton modal-regalos"
-            >Regalos</a
-          >
+          <a href="#" class="boton modal-regalos">Regalos</a>
         </div>
       </div>
     </section>
@@ -600,11 +598,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>After all this time?</p>
-
-            <!-- Modal cambio de idioma -->
-
-            <p>Always</p>
+            <p></p>
           </div>
         </div>
       </div>
@@ -712,7 +706,9 @@
                     name="bus"
                     class="form-check-input custom-control-input"
                   />
-                  <label for="bus" class="form-check-label custom-control-label bold"
+                  <label
+                    for="bus"
+                    class="form-check-label custom-control-label bold"
                     >Me apunto al bus</label
                   >
                 </div>
@@ -827,12 +823,10 @@
           </div>
 
           <div class="modal-body">
-           
-
             <p>• Rogamos puntualidad.</p>
             <p>
-              • Tendremos un bus desde la iglesia a la masía y de la masía
-              a la plaza Manuel Sanchis Guarner (Pantera rosa) con salidas a las
+              • Tendremos un bus desde la iglesia a la masía y de la masía a la
+              plaza Manuel Sanchis Guarner (Pantera rosa) con salidas a las
               22:00h y a las 24:00h. No olvides apuntarte si lo vas a necesitar
               al confirmar tu asistencia.
             </p>
@@ -841,9 +835,11 @@
               ¿Necesitas más información? ¿Quieres darle una sorpresa a los
               novios? ¡Contacta con las Wedding Planners!
             </p>
-            <p>Pilar: +34 674 01 54 80
-              <br>
-           Ágata: +34 658 49 98 91</p>
+            <p>
+              Pilar: +34 674 01 54 80
+              <br />
+              Ágata: +34 658 49 98 91
+            </p>
           </div>
 
           <div class="modal-footer"></div>
@@ -872,7 +868,10 @@
           </div>
 
           <div class="modal-header">
-            <h5 class="modal-title">Tres cosas hay en la vida: salud, dinero y amor. Afortunadamente nos sobran salud y amor.</h5>
+            <h5 class="modal-title">
+              Tres cosas hay en la vida: salud, dinero y amor. Afortunadamente
+              nos sobran salud y amor.
+            </h5>
           </div>
           <br />
           <p
@@ -1858,16 +1857,16 @@
       if ($(window).width() < 768) {
         // Aceptar webp?
         if (support_format_webp()) {
-          var imageInstagramParallax = "img/instagram-us-mobile.png"; // todo add webp
+          var imageInstagramParallax = "img/instagram-us.webp"; // todo add webp
         } else {
-          var imageInstagramParallax = "img/instagram-us-mobile.jpg";
+          var imageInstagramParallax = "img/instagram-us.png";
         }
       } else {
         // Aceptar webp?
         if (support_format_webp()) {
-          var imageInstagramParallax = "img/instagram-us.png"; //TODO CAMBIAR  A WEBP
+          var imageInstagramParallax = "img/instagram-us.webp"; //TODO CAMBIAR  A WEBP
         } else {
-          var imageInstagramParallax = "img/instagram-us.jpg";
+          var imageInstagramParallax = "img/instagram-us.png";
         }
       }
 
@@ -1923,16 +1922,16 @@
       if (device == "mobile" || $(window).width() < 768) {
         // Aceptar webp?
         if (support_format_webp()) {
-          var imageParallax = "img/portada-us.jpg"; //todo add webp
+          var imageParallax = "img/20.webp"; //todo add webp
         } else {
-          var imageParallax = "img/portada-us-mobile.jpg";
+          var imageParallax = "img/20.jpg";
         }
       } else {
         // Aceptar webp?
         if (support_format_webp()) {
-          var imageParallax = "img/portada-us.jpg"; //TODO CAMBIAR A WEBP
+          var imageParallax = "img/20.webp"; //TODO CAMBIAR A WEBP
         } else {
-          var imageParallax = "img/portada-us.jpg";
+          var imageParallax = "img/20.jpg";
         }
       }
 
