feat: add scripts

--- a/index.html
+++ b/index.html
@@ -424,6 +424,17 @@
               </a>
             </div>
           </div>
+
+           <!-- Impmrimo el bloque con la imagen -->
+
+           <div>
+            <div class="polaroid">
+              <a href="img/galeria/6.jpg" data-fancybox="galeria">
+                <img src="img/galeria/6.jpg" alt="" />
+              </a>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
