feat: last updates

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             Comparte tus fotos y vídeos de este hermoso día
           </p>
 
-          <div class="w-100">
+          <div class="w-100 instagram-logo">
             <div class="anim-instagram"></div>
           </div>
 
@@ -710,7 +710,7 @@
                   ></textarea>
                 </div>
 
-                <div class="form-check">
+                <div class="form-check bus-check">
                   <input
                     type="checkbox"
                     id="bus"
@@ -836,10 +836,9 @@
           <div class="modal-body">
             <p>• Rogamos puntualidad.</p>
             <p>
-              • Tendremos un bus desde la iglesia a la masía y de la masía a la
-              plaza Manuel Sanchis Guarner (Pantera rosa) con salidas a las
-              22:00h y a las 24:00h. No olvides apuntarte si lo vas a necesitar
-              al confirmar tu asistencia.
+              • Se ofrecerá servicio de transporte en autobús desde la iglesia hasta la masía y desde esta última 
+              hasta la plaza Manuel Sanchis Guarner (Pantera Rosa) con salidas a las 22:00h 
+              y las 24:00h. No olvides apuntarte si lo vas a necesitar al confirmar tu asistencia.
             </p>
 
             <p class="bold">
